Add inline pronunciations
